--- a/home.css
+++ b/home.css
@@ -17,8 +17,28 @@ body {
     margin-bottom: 5px;
 }
 
-.courseselect {
+#loginForm {
     margin: 0 auto; 
-    width:250px;
+    margin-top: 15px;
     text-align: center;
 }
+#courses {
+    font-family: Georgia;
+    font-size: 15px;
+}
+
+.button {
+    background-color: lightblue; 
+    border: none;
+    color: black;
+    padding: 5px 10px;
+    font-size: 16px;
+    border-radius: 5px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+  }
+
+  .button:hover {
+    background-color: black; 
+    color: white;
+  }
