--- a/home.css
+++ b/home.css
@@ -1,18 +1,33 @@
 body {
     margin: 0;
-    background-color: #fff;
+    background-color: #ecf9ff;
 }
 
 #header {
-    font-family: Georgia;
+    margin-top: 40px;
+    font-family: "Inter";
+    color: #3c5b8b;
+    font-weight: 600;
     font-size: 50px;
     text-align: center;
     margin-bottom: 10px;
 }
 
-#choose {
-    font-family: Georgia;
+#explanation {
+    font-family: "Public Sans";
     font-size: 20px;
+    margin-top: 20px;
+    margin-left: 20vw;
+    margin-right: 20vw;
+    text-align: center;
+}
+
+#choose {
+    margin-top: 20px;
+    font-family: "Inter";
+    font-weight: 500;
+    color: #3c5b8b;
+    font-size: 30px;
     text-align: center;
     margin-bottom: 5px;
 }
@@ -20,9 +35,10 @@ body {
 #courseExplain {
     display: none;
     margin-left: 30px;
-    font-family: Georgia;
+    font-family: "Public Sans";
     margin-top: 20px;
     text-align: center;
+    font-size: 20px;
 }
 
 #loginForm {
@@ -31,16 +47,22 @@ body {
     text-align: center;
 }
 #courses {
-    font-family: Georgia;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 5px 10px;
+    font-family: "Public Sans";
     font-size: 15px;
+    cursor: pointer;
+    border: none;
+    border-radius: 3px;
 }
 
 .button {
-    background-color: lightblue; 
+    background-color: #90d5ff; 
     border: none;
     color: black;
     padding: 5px 10px;
-    font-size: 16px;
+    font-family: "Inter";
+    font-size: 15px;
     border-radius: 5px;
     transition-duration: 0.4s;
     cursor: pointer;
@@ -75,7 +97,7 @@ body {
 
 #daysInput {
     margin-left: 30px;
-    font-family: Georgia;
+    font-family: "Public Sans";
     margin-bottom: 10px;
 }
 
@@ -86,6 +108,7 @@ body {
     position: relative;
     display: flex;
     flex-direction: column;
+    font-family: "Inter";
 }
 
 #courseContainer {
@@ -134,17 +157,17 @@ body {
     cursor: pointer;
 }
 #aaUnit1, #aaUnit2, #aaUnit3, #aaUnit4 {
-    background-color: rgb(255, 70, 70);
+    background-color: rgb(231, 99, 99);
     padding: 10px;
     cursor: pointer;
 }
 #calcABUnit1, #calcABUnit2, #calcABUnit3, #calcABUnit4, #calcABUnit5, #calcABUnit6, #calcABUnit7, #calcABUnit8 {
-    background-color: rgb(80, 74, 255);
+    background-color: rgb(87, 84, 171);
     padding: 10px;
     cursor: pointer;
 }
 #calcBCUnit1, #calcBCUnit2, #calcBCUnit3, #calcBCUnit4, #calcBCUnit5, #calcBCUnit6, #calcBCUnit7, #calcBCUnit8, #calcBCUnit9, #calcBCUnit10 {
-    background-color: rgb(183, 76, 255);
+    background-color: rgb(187, 120, 232);
     padding: 10px;
     cursor: pointer;
 }
@@ -159,7 +182,7 @@ body {
     cursor: pointer;
 }
 #compGovUnit1, #compGovUnit2, #compGovUnit3, #compGovUnit4, #compGovUnit5 {
-    background-color: rgb(255, 58, 127);
+    background-color: rgb(242, 107, 154);
     padding: 10px;
     cursor: pointer;
 }
@@ -184,12 +207,12 @@ body {
     cursor: pointer;
 }
 #frenchUnit1, #frenchUnit2, #frenchUnit3, #frenchUnit4, #frenchUnit5, #frenchUnit6 {
-    background-color: rgb(110, 255, 224);
+    background-color: rgb(118, 215, 194);
     padding: 10px;
     cursor: pointer;
 }
 #germanUnit1, #germanUnit2, #germanUnit3, #germanUnit4, #germanUnit5, #germanUnit6 {
-    background-color: rgb(48, 207, 255);
+    background-color: rgb(105, 194, 222);
     padding: 10px;
     cursor: pointer;
 }
@@ -234,7 +257,7 @@ body {
     cursor: pointer;
 }
 #precalcUnit1, #precalcUnit2, #precalcUnit3, #precalcUnit4 {
-    background-color: rgb(51, 38, 169);
+    background-color: rgb(82, 73, 160);
     padding: 10px;
     cursor: pointer;
 }
@@ -267,4 +290,8 @@ body {
     background-color: rgb(54, 158, 157);
     padding: 10px;
     cursor: pointer;
+}
+
+#calendarSubmit {
+    margin-top: 14px;
 }
