--- a/home.css
+++ b/home.css
@@ -35,7 +35,7 @@ body {
 #courseExplain {
     display: none;
     margin-left: 30px;
-    font-family: "Public Sans";
+    font-family: "Inter";
     margin-top: 20px;
     text-align: center;
     font-size: 20px;
@@ -84,6 +84,8 @@ body {
     padding: 15px 10px 50px 10px;
     box-sizing: border-box;  /* Ensure padding is included in the total width and height */
     transition: all 0.2s ease; 
+    font-family: "Public Sans";
+    font-size: 15px;
 }
 
 .dropped-item {
@@ -96,19 +98,33 @@ body {
 
 
 #daysInput {
-    margin-left: 30px;
     font-family: "Public Sans";
+    margin-left: 30px;
     margin-bottom: 10px;
 }
 
+#daysInputField {
+    font-family: "Inter";
+    border: none;
+    border-radius: 3px;
+    font-size: 15px;
+    box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.2);
+    padding: 3px 2px;
+}
 
-#csUnits, #physicsUnits, #physics2Units, #physics3Units, #bioUnits, #aaUnits, #calcABUnits, #calcBCUnits, #chemUnits, #chineseUnits, #compGovPolUnits, #csPrinciplesUnits, #litUnits, #apesUnits, #euroUnits, #frenchUnits, #germanUnits, #hugUnits, #italianUnits, #japaneseUnits, #latinUnits, #macroEconUnits, #microEconUnits, #musicTheoryUnits, #physics3aUnits, #precalcUnits, #psychUnits, #spanishUnits, #statsUnits, #usgovUnits, #apushUnits, #worldUnits {
+#calendarSubmit {
+    margin-top: 17px;
+}
+
+
+#csUnits, #physicsUnits, #physics2Units, #physics3Units, #bioUnits, #aaUnits, #artHistoryUnits, #calcABUnits, #calcBCUnits, #chemUnits, #chineseUnits, #compGovPolUnits, #csPrinciplesUnits, #litUnits, #apesUnits, #euroUnits, #frenchUnits, #germanUnits, #hugUnits, #italianUnits, #japaneseUnits, #latinUnits, #macroEconUnits, #microEconUnits, #musicTheoryUnits, #physics3aUnits, #precalcUnits, #psychUnits, #spanishUnits, #statsUnits, #usgovUnits, #apushUnits, #worldUnits {
     padding: 10px;
     width: 220px;
     position: relative;
     display: flex;
     flex-direction: column;
-    font-family: "Inter";
+    font-family: "Public Sans";
+    margin-left: 9vw;
 }
 
 #courseContainer {
@@ -117,10 +133,6 @@ body {
     padding: 20px;
 }
 
-<<<<<<< HEAD
-=======
-
->>>>>>> 0d6a2d3285fbce80876e7868b8b31379b41901d2
 #csUnits, #physicsUnits, #physics2Units, #physics3Units, #bioUnits, #aaUnits, #calcABUnits, #calcBCUnits, #chemUnits, #chineseUnits, #compGovPolUnits, #csPrinciplesUnits, #litUnits, #apesUnits, #euroUnits, #frenchUnits, #germanUnits, #hugUnits, #italianUnits, #japaneseUnits, #latinUnits, #macroEconUnits, #microEconUnits, #musicTheoryUnits, #physics3aUnits, #precalcUnits, #psychUnits, #spanishUnits, #statsUnits, #usgovUnits, #apushUnits, #worldUnits {
     display: flex; /* Aligns the units horizontally */
     flex-direction: column; /* Makes units appear in a vertical column */
@@ -293,8 +305,4 @@ body {
     background-color: rgb(54, 158, 157);
     padding: 10px;
     cursor: pointer;
-}
-
-#calendarSubmit {
-    margin-top: 14px;
 }
